--- a/SettingsDialog.ui
+++ b/SettingsDialog.ui
@@ -7,13 +7,20 @@
     <x>0</x>
     <y>0</y>
     <width>459</width>
-    <height>525</height>
+    <height>545</height>
    </rect>
   </property>
   <property name="windowTitle">
    <string>Settings</string>
   </property>
   <layout class="QVBoxLayout" name="verticalLayout_2">
+   <item>
+    <widget class="QLineEdit" name="lineEditSettingsFileName">
+     <property name="readOnly">
+      <bool>true</bool>
+     </property>
+    </widget>
+   </item>
    <item>
     <widget class="QGroupBox" name="groupBox">
      <property name="title">
